--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </p>
     <p>🤯 Aprendi a fazer com o Dev Web!</p>
     <hr>
-    <p>&copy; Ermogenes Palacio - 2021</p>
+    <p>&copy; Ermogenes Palacio - 2021 - 2º semestre</p>
 </body>
 </html>
